# OpenAG-Xash3D-Mobile

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  README.md
cl_dll/: Android.mk  cdll_int.cpp  discord_integration.cpp  entity.cpp  steam_id.cpp  update_checker.cpp
cl_dll/platform/android/: input_android.cpp
dlls/: Android.mk
